--- a/views/time-line.ejs
+++ b/views/time-line.ejs
@@ -1,6 +1,6 @@
 <!-- padding ka issue aaega and div align ka bhi-->
 <!--Solve it using width:100% or display:flex;flex-direction:column;align-item:center-->
-*<div class="time-line"> 
+<div class="time-line"> 
 
     <div class="timeline-samay">
 
