--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,23 +3,78 @@ body{
     margin:0;
 }
 
-
+/*----- NAVBAR Designing -----*/
 .navbar-wrapper{
     display: flex;
     flex-direction: row;
 }
 
 .logo-wrapper{
-    height: 35px;
-    width: 35px;
+    height: 185px;
+    width: 185px;
+    overflow: hidden;
+}
+.logo-wrapper img{
+    align-items: left;
+    width:95%;
+    height:fit-content;
+    object-fit: contain;
+    margin-left:10px;
 }
 .search-bar-container{
+    display: flex;
+    height: 185px;
     width: 100%;
-    height: 35px;
+    justify-content:center;
+    align-items: center;
 }
-
+.search-bar-wrapper{
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    margin-bottom:10px;
+}
 .search-icon{
-    width: 35px;
-    height: 35px;
+    margin-right: 15px;
+    font-size: 24px;
+}
+.search-input{
+    padding: 10px;
+    width:1000px;
+    border-radius: 10px;
 }
 
+/*------- MAIN SECTION -------*/
+.body-wrapper{
+    display: grid;
+    padding: 30px;
+}
+.temperature-wrapper{
+    background-color: aquamarine;
+}
+/*----Weather Icon-----*/
+.temp-degree{
+    display: flex;
+    background-color: rgb(121, 172, 242);
+}
+#temp-value{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 105px;
+}
+#temp-icon img{
+    margin-left: 15px;
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+}
+/*----Weather Details------*/
+.temp-usp{  
+
+}
+.additional-info{
+
+}
+.additional-info ul{
+    list-style-type: none;
+}
