--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,83 +6,104 @@
     <title>Climate Companion</title>
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
-<body>
-    <nav>
-        <div class="navbar-wrapper">
-            <div class="logo-wrapper">
-                <img src="/images/logo/logo-nobg-cropped.png">
-            </div>
-            
-            <div class="search-bar-container">
-                <div class="search-bar-wrapper">
-                    <!--search bar icon-->
-                    <i class="search-icon">🔍</i>
-                    <!--search bar -->
-                    <input type="text" class="search-input" placeholder="Enter City/Country Name...." onclick="toggleDropdown()">
-                    <div class="dropdown" id="myDropdown" style="display:none;">
-                        <a href="#" class="dropdown-item">Lourem</a>
-                        <a href="#" class="dropdown-item">Lourem</a>
-                        <a href="#" class="dropdown-item">Lourem</a>
-                    </div>  
-                </div>
-
-            </div>
-        </div>
-    </nav>
-
-    <section>
-
-        <div class="body-wrapper">
-
-            <div class="temperature-wrapper">
-                <div class="temp-degree">
-                    <span id="temp-value">25°C</span>
-                    <div id="temp-icon">
-                        <!--yaha corressponding icon aaega temperature ke hisab se -->
-                        <!--link nhi kiya abhi just testing ke liye link daal rakha hai-->
-                        <img src="/images/weather_icons/clear_sky/clear_sun.gif" alt="animated image"/>
-                    </div>
-                </div>
-
-                <div class="temp-usp">
-                    <div class="additional-info">
-                        <ul class="detail-list">
-                            <!--Yaha bhi info link karni hai-->
-                            <li class="info-1">Precipitation: 0%</li>
-                            <li class="info-2">Humidity: 32%</li>
-                            <li class="info-3">Wind: 10 km/h</li>
-                            <li class="info-4">Mostly Cloudy</li>
-                            <li class="info-5">Feels like:23°C</li>
-
-                        </ul>
-                        
-                    </div>
-                </div>
-
-            </div>
-    
-            <div class="time-line-wrapper">
-                <div class="time-line">
-
-                    <div class="timeline-samay">
-
-                    </div>
-
-                    <div class="timeline-icon">
-
-                    </div>
-
-                    <div class="timeline-temp">
-
+<body>    
+        <nav>
+        <div class="glass-effect-container glass-effect">
+            <div class="navbar-wrapper">
+                <div class="logo-wrapper">
+                    <img src="/images/logo/logo-nobg-cropped.png">
+                </div>                
+                <div class="search-bar-container">
+                    <div class="search-bar-wrapper">
+                        <!--search bar icon-->
+                        <i class="search-icon">🔍</i>
+                        <!--search bar -->
+                        <input type="text" class="search-input" placeholder="Enter City/Country Name...." onclick="toggleDropdown()">
+                        <div class="dropdown" id="myDropdown" style="display:none;">
+                            <a href="#" class="dropdown-item">Lourem</a>
+                            <a href="#" class="dropdown-item">Lourem</a>
+                            <a href="#" class="dropdown-item">Lourem</a>
+                        </div>  
                     </div>    
                 </div>
             </div>
-    
-            <section class="5day-climate-wrapper">
-                <!--card.ejs X 5 times for 5-day Forecast-->
-            </section>
         </div>
+        </nav>
+    
+    <section>
+        <div class="body-wrapper">
+            <div class="glass-effect-container glass-effect">
+                <div class="temperature-wrapper">
+                    <div class="temp-degree">
+                        <span id="temp-value"><%= currentTemperature %> °C</span>
+                        <div id="temp-icon">
+                            <!--yaha corressponding icon aaega temperature ke hisab se -->
+                            <!--link nhi kiya abhi just testing ke liye link daal rakha hai-->
+                            <img src="/images/weather_icons/clear_sky_800/clear_sun.gif" alt="animated image"/>
+                        </div>
+                    </div>       
+                    <div class="temp-usp">
+                        <div class="additional-info">
+                            <ul class="detail-list">
+                                <!--Yaha bhi info link karni hai-->
+                                *<li class="info-1">Precipitation: 0%</li>
+                                    <li class="info-2">Humidity: 32%</li>
+                                    <li class="info-3">Wind: 10 km/h</li>
+                                    <li class="info-4">Mostly Cloudy</li>
+                                    <li class="info-5">Feels like:23°C</li>      
+                                </ul>                               
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="glass-effect-container glass-effect">
+                    <div class="time-line-wrapper">
+                        <% for(index = 0; index < 8; index++) { %>
+                            <div class="time-line">            
+                                <div class="timeline-time">
+                                    <%= time_tl[index].main.temp %>
+                                </div>                            
+                                <div class="timeline-icon">
+                                    <%= weather_tl[index].weather[0].id %> 
+                                </div>                            
+                                <div class="timeline-temp">
+                                    <%= time_tl[index].dt_txt.slice(11, 16) %> 
+                                </div>                           
+                            </div>
+                        <% } %>
+                    </div>
+                </div>               
+                <div class="glass-effect-container glass-effect">
+                    <section class="5day-climate-wrapper">
+                    <% for(index=0; index < 5; index++) { %>
+                        <div class="forecast-card-wrapper">   
+                            <div class="date"> 
+                                date of the day
+                            </div>                            
+                            <div class="icon"> 
+                                corresponding icon related to weather type
+                            </div>                        
+                            <div class="weather-desp">
+                                type of weather specified
+                            </div>                        
+                            <div class="degree-wrapper">                           
+                                <div class="max-degree">
+                                    max temperature for the day
+                                </div>                        
+                                <div class="min-degree">
+                                    min temperature for the day
+                                </div>
+                            </div>
+                        </div>
+                    <% } %>   
+                        <!--card.ejs X 5 times for 5-day Forecast-->
+                    </section>
+                </div>
+            </div>            
+        
     </section>
+
+    
 </body>
 </html>
