--- a/views/time-line.ejs
+++ b/views/time-line.ejs
@@ -1,17 +1,19 @@
 <!-- padding ka issue aaega and div align ka bhi-->
-<!--Solve it using width:100% or display:flex;flex-direction:column;align-item:center-->
-<div class="time-line"> 
-
-    <div class="timeline-samay">
-
+<!-- Solve it using width:100% or display:flex;flex-direction:column;align-item:center-->
+<!-- total 8 cards bnege -->
+<!-- 15:00 to 12:00 noon timeline -->
+<div class="time-line">
+        
+    <div class="timeline-time">
+        Yaha time aaega 
     </div>
 
     <div class="timeline-icon">
-
+        Yaha corressponding icon aaega 
     </div>
 
     <div class="timeline-temp">
-
+        Yaha temperature aaega jiske hisab se icon dekhna hai 
     </div>    
 
 </div>
