--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,5 @@
 body{
+    color: white;
     font-family: 'Poppins';
     padding:0;
     margin:0;
@@ -86,9 +87,11 @@ body{
 /*------- MAIN SECTION -------*/
 .body-wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr; 
+    grid-template-columns: 2fr 1fr; 
     grid-template-rows: auto auto; 
-    grid-gap: 10px;
+    column-gap: 60px;
+    row-gap: 40px;
+    height: auto;
     padding: 30px;
 }
 #first-grid-div{
@@ -101,6 +104,7 @@ body{
 /*----Weather Icon-----*/
 .temp-degree{
     display: flex;
+    justify-content: center;
     /*background-color: rgb(121, 172, 242);*/
 }
 #temp-value{
@@ -113,7 +117,10 @@ body{
     object-fit: contain;
 }
 /*----Weather Details------*/
-.temp-usp{  
+.temp-usp{      
+    padding-left:40px;
+    font-size: 25px;
+
 }
 .additional-info{
 }
