--- a/views/suggestions.ejs
+++ b/views/suggestions.ejs
@@ -1,28 +1,47 @@
 <script>
 
-const suggestionsElement = document.getElementById("suggestions");
-
-function getSuggestions(input) {
-  const suggestions = ["Apple", "banana", "cherry", "grape", "orange", "pear"];
+async function getSuggestions(input) {
+  const suggestionsElement = document.getElementById("suggestions");
+  const searchInput = document.getElementById("searchInput");
 
   suggestionsElement.innerHTML = "";
 
   if (input) {
-    const filteredSuggestions = suggestions.filter((suggestion) =>
-      suggestion.toLowerCase().startsWith(input.toLowerCase())
-    );
+    const apiKey = "0773f06d983e61482c094fb56f2cc21a";
+    const inputEncoded = encodeURIComponent(input);
 
-    filteredSuggestions.forEach((suggestion) => {
-      const suggestionElement = document.createElement("div");
-      suggestionElement.textContent = suggestion;
-      suggestionElement.addEventListener("click", () => {
-        document.getElementById("searchInput").value = suggestion;
-        suggestionsElement.style.display = "none";
-      });
-      suggestionsElement.appendChild(suggestionElement);
-    });
+    try {
+      const response = await fetch(
+        `https://api.openweathermap.org/data/2.5/find?q=${inputEncoded}&type=like&appid=${apiKey}`
+      );
+      const data = await response.json();
+      console.log(data);
+      if (data.cod === "200") {
+        const cities = data.list.map(
+          (city) => `${city.name}, ${city.sys.country}`
+        );
 
-    suggestionsElement.style.display = "block";
+        const filteredSuggestions = cities.filter((city) =>
+          city.toLowerCase().startsWith(input.toLowerCase())
+        );
+
+        filteredSuggestions.forEach((city) => {
+          const suggestionElement = document.createElement("div");
+          suggestionElement.textContent = city;
+          suggestionElement.addEventListener("click", () => {
+            searchInput.value = city;
+            suggestionsElement.style.display = "none";
+          });
+          suggestionsElement.appendChild(suggestionElement);
+        });
+
+        suggestionsElement.style.display = "block";
+      } else {
+        console.error("Error fetching suggestions:", data.message);
+      }
+    } catch (error) {
+      console.error("Error fetching suggestions:", error);
+    }
   } else {
     suggestionsElement.style.display = "none";
   }
