Added potato comment
Added potato comment for a reminder to eat potato

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-
+        // potato
         <div class="glass-effect-container glass-effect" id="Second-grid-div">
           <div class="time-line-wrapper">
             <% for(index = 0; index < 8; index++) { %>
